--- a/templates/index.html
+++ b/templates/index.html
@@ -13,5 +13,32 @@
   </head>
   <body>
     <h1>Hello!!!</h1>
+
+    <form>
+      <input type="text" name="query" />
+      <button>Submit</button>
+    </form>
+
+    <script>
+      const form = document.querySelector("#form");
+      form.addEventListener("submit", function (event) {
+        event.preventDefault();
+        const query = form.elements.query.value;
+        fetch("/palette", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/x-www-form-urlencoded",
+          },
+          body: new URLSearchParams({
+            query: query,
+          }),
+        })
+          .then((response) => response.json())
+          .then((data) => {
+            console.log(data);
+          })
+          .catch((error) => console.error("Error:", error));
+      });
+    </script>
   </body>
 </html>
